--- a/test/dummy/app/pdf/report1/invoice.pug.erb
+++ b/test/dummy/app/pdf/report1/invoice.pug.erb
@@ -11,15 +11,15 @@ body
       .company-address
         h2.title Company title
         p
-          | 455 Foggy Heights,
+          | 455 Smart Heights,
           br
-          | AZ 85004, US
+          | AZ 85000, US
 
       .company-contact
         .phone.left
           i(class="fas fa-phone")
           span.helper
-          a(href="tel:602-519-0450")   (602) 519-0450
+          a(href="tel:602-519-0450")   (602) 555-0450
           span.helper
         .email.right
           i(class="fas fa-envelope")
@@ -32,15 +32,15 @@ body
       .details.clearfix
         .client.left
           p INVOICE TO:
-          p.name John Doe
-          p 796 Silver Harbour, TX 79273, US
+          p.name John Smith
+          p 700 Silver Base, TX 79000, US
           a(href="mailto:john@example.com") john@example.com
         .data.right
-          .title Invoice 3-2-1
+          .title Invoice #321
           .date
-            | Date of Invoice: 01/06/2014
+            | Date of Invoice: 01/06/2012
             br/
-            | Due Date: 30/06/2014
+            | Due Date: 30/06/2012
       table(border="0" cellpadding="0" cellspacing="0")
         thead
           tr
