--- a/lib/generators/rails_pdf/templates/chart1/chart.pug.erb
+++ b/lib/generators/rails_pdf/templates/chart1/chart.pug.erb
@@ -1,74 +1,13 @@
 script(src='<%= Rails.root %>/app/pdf/shared/javascripts/Chart.bundle.min.js')
 
 link(rel="stylesheet" href="<%= Rails.root %>/app/pdf/shared/stylesheets/bootstrap/bootstrap.min.css")
+link(rel="stylesheet" href="<%= Rails.root %>/app/pdf/shared/stylesheets/bootstrap/bootstrap.print.css")
 
 style(lang="css")
   :scss
     // A4
     $page-width: 8.27in;
     $page-height: 11.69in;
-
-    // For printing
-    @media print {
-      .col-print-1 {
-        flex: 0 0 8.33333%;
-        max-width: 8.33333%; } }
-
-    @media print {
-      .col-print-2 {
-        flex: 0 0 16.66667%;
-        max-width: 16.66667%; } }
-
-    @media print {
-      .col-print-3 {
-        flex: 0 0 25%;
-        max-width: 25%; } }
-
-    @media print {
-      .col-print-4 {
-        flex: 0 0 33.33333%;
-        max-width: 33.33333%; } }
-
-    @media print {
-      .col-print-5 {
-        flex: 0 0 41.66667%;
-        max-width: 41.66667%; } }
-
-    @media print {
-      .col-print-6 {
-        flex: 0 0 50%;
-        max-width: 50%; } }
-
-    @media print {
-      .col-print-7 {
-        flex: 0 0 58.33333%;
-        max-width: 58.33333%; } }
-
-    @media print {
-      .col-print-8 {
-        flex: 0 0 66.66667%;
-        max-width: 66.66667%; } }
-
-    @media print {
-      .col-print-9 {
-        flex: 0 0 75%;
-        max-width: 75%; } }
-
-    @media print {
-      .col-print-10 {
-        flex: 0 0 83.33333%;
-        max-width: 83.33333%; } }
-
-    @media print {
-      .col-print-11 {
-        flex: 0 0 91.66667%;
-        max-width: 91.66667%; } }
-
-    @media print {
-      .col-print-12 {
-        flex: 0 0 100%;
-        max-width: 100%; } }
-
     @page {
       size: $page-width $page-height;
       -relaxed-page-width: $page-width;
@@ -81,75 +20,95 @@ style(lang="css")
     img.logo {
       height: 100px;
     }
+    #chartContainer {
+      #componentsChart {
+        margin: 0 auto;
+      }
+    }
 
 .container
  .row
     .col-sm-10.col-print-10
-      h1
-        span Sales Report
+      h1.text-center
+        strong Sales Report Analysis
         br
-        span.text-success <%= Date.current.year %>
+        strong.text-success <%= Date.current.year %> (Q1)
     .col-sm-2.col-print-2
       img.logo.img-fluid(src="<%= Rails.root %>/app/pdf/shared/images/rails_pdf.png")
-    .col-sm-12.col-print-12
-      hr
 br
 
 .container
   .row
     .col-md-6.col-print-6
-      .card
+      .card(style="height: 410px")
         .card-header Performance
         .card-body
           #chartContainer
-            canvas#componentsChart(style="width: 100%")
+            canvas#componentsChart(height="350")
     .col-md-6.col-print-6
-      .card
+      .card(style="height: 410px")
         .card-header Top performers
         .card-body
           p List of top performers in Q4:
           table.table.p-0.m-0
             tbody
               tr
-                td John Smith
+                td 1
+                td 
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') John Smith
                 td NY
-                td $500
+                td $50
               tr
-                td Bob Smith
+                td 2
+                td
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Bob Smith
                 td CA
-                td $1320
+                td $120
               tr
-                td Michael Smith
-                td CA
+                td 3
+                td
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Michael Smith
+                td AZ
                 td.text-success $1,500
               tr
-                td Adam Johnson
+                td 4
+                td
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Adam Johnson
                 td CA
                 td.text-danger -$100
+              tr
+                td 5
+                td
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Anna Stephanson
+                td TX
+                td.text-danger -$50
+              tr
+                td 6
+                td
+                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Nicole Tensor
+                td DE
+                td.text-success $500
 
 br
 
 .container
   .row
     .col-md-12
-      .card
+      .card(style="height: 620px")
         .card-header Sales Trends
         .card-body
           #salesChartContainer
             canvas#salesChart(style="width: 100%")
-
-br
-
-.container
-  .row
-    .col-md-12
-      p.lead This is a list of 10 working graphs (bar chart, pie chart, line chart, etc.) with colors and data set up to render decent looking charts that you can copy and paste into your own projects, and quickly get going with customizing and fine-tuning to make them fit your style and purpose.
+          br
+          p.lead
+            small This is a list of 10 working graphs (bar chart, pie chart, line chart, etc.) with colors and data set up to render decent looking charts that you can copy and paste into your own projects.
 
 div(style="page-break-before:always")
 
 .container
   .row
     .col-md-12
+      h2 Plans & Trends
       p.lead Our report is a list of 10 working graphs (bar chart, pie chart, line chart, etc.) with colors and data set up to render decent looking charts that you can copy and paste into your own projects, and quickly get going with customizing and fine-tuning to make them fit your style and purpose.
 
 br
@@ -174,37 +133,25 @@ script.
     type: 'polarArea',
     data: {
       datasets: [{
-          data: [20, 30, 55],
+          data: [20, 30, 60],
           backgroundColor: [ "#FF6384AA", "#4BC0C0AA", "#36A2EBAA"],
           label: 'My dataset' // for legend
       }],
       labels: ["Rails", "PDF", "Gem"]
     },
     options: {
-      devicePixelRatio: 1,
+      devicePixelRatio: 3,
       legend: {
         position: 'bottom'
       },
-      deferred: {
-    	   xOffset: 150, 
-    	   delay: 100
-       },
       scale: {
         ticks: {
-          suggestedMax: 60,
+          suggestedMax: 80,
           stepSize: 20
         }
       }
     }
   };
-  if (config.options.width) {
-    canvas.style.width = config.options.width;
-    container.style.width = config.options.width;
-  }
-  if (config.options.height) {
-    canvas.style.height = config.options.height;
-    container.style.height = config.options.height;
-  }
   var ctx = document.getElementById("componentsChart").getContext('2d');
   var componentsChart = new Chart(ctx, config);
 
@@ -241,6 +188,7 @@ script.
       ]
     },
     options: {
+      devicePixelRatio: 3,
     }
   });
 
@@ -269,5 +217,7 @@ script.
           }
         ]
       },
-      options: { }
+      options: {
+        devicePixelRatio: 3,
+      }
   });  
