Find binary in system

--- a/lib/generators/rails_pdf/templates/chart1/chart.pug.erb
+++ b/lib/generators/rails_pdf/templates/chart1/chart.pug.erb
@@ -55,37 +55,37 @@ br
               tr
                 td 1
                 td 
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') John Smith
+                  a(href='#') John Smith
                 td NY
                 td $50
               tr
                 td 2
                 td
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Bob Smith
+                  a(href='#') Bob Smith
                 td CA
                 td $120
               tr
                 td 3
                 td
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Michael Smith
+                  a(href='#') Michael Smith
                 td AZ
                 td.text-success $1,500
               tr
                 td 4
                 td
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Adam Johnson
+                  a(href='#') Adam Johnson
                 td CA
                 td.text-danger -$100
               tr
                 td 5
                 td
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Anna Stephanson
+                  a(href='#') Anna Stephanson
                 td TX
                 td.text-danger -$50
               tr
                 td 6
                 td
-                  a(href='https://github.com/igorkasyanchuk/rails_pdf') Nicole Tensor
+                  a(href='#') Nicole Tensor
                 td DE
                 td.text-success $500
 
