newer version with locals support

--- a/test/dummy/app/pdf/index/index.pug.erb
+++ b/test/dummy/app/pdf/index/index.pug.erb
@@ -6,7 +6,7 @@ link(href="<%= Rails.root %>/app/pdf/index/stylesheets/template.css" rel="styles
 .container
   .row
     .col-md-12
-      h1 Sales Report 2019
+      h1 Sales Report 2019 for <%= user.first_name.to_s + ' ' + user.last_name.to_s %>
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam velit urna, tincidunt vel mauris sit amet, dictum fermentum diam. Integer dignissim lorem ante, eget ultrices libero tincidunt at. Integer ut elit volutpat mauris suscipit tempus eget a ipsum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam mattis nisl vel tellus bibendum, eu vulputate ligula semper. Nulla varius nulla sit amet nisl rhoncus dapibus.
       table.table.table-bordered
         thead
