--- a/test/dummy/app/views/home/index.html.erb
+++ b/test/dummy/app/views/home/index.html.erb
@@ -1,4 +1,9 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 
-<%= link_to 'Download', report_path(format: :pdf) %>
+<%= link_to 'Download USER Report', report_path(format: :pdf) %>
+
+<br/>
+<br/>
+
+<%= link_to 'Download Project Report', download_project_path(format: :pdf) %>
